# Footsteps

./: README.md
GenAI/: LICENSE  README.md
GenAI/AutoGen/: README.md  pyproject.toml  requirements.txt
GenAI/AutoGen/_data/_cache/: cache.db
GenAI/AutoGen/_data/_code/: inv.py  tmp_code_7b9dbf0699af5b5bd0c1712367da6fb09ce9db7f98a6d4c282e645013ed1cd86.py  tmp_code_9387867e9838ab724665c6a56cbcc751cf912c9856071a14cb8616392229cd96.py  tmp_code_d904db55556763b2e23d1f16bcab229c7a9c475aa76b6df252d0d87ed40d45be.py
GenAI/AutoGen/_examples/: agents.py  models.py  teams.py
GenAI/AutoGen/_tools/_cmd/: kali_tools.py
GenAI/AutoGen/_tools/_prompts/: basic_prompts.py
GenAI/AutoGen/examples/: create_model.py
GenAI/AutoGen/examples/agent_chat/: agents.ipynb  quickstart.ipynb  teams.ipynb
GenAI/LangChain/: README.md  requirements.txt
GenAI/LangChain/_examples/: embeddings.py  loaders.py  models.py  splitters.py  vector_store.py
GenAI/OpenAI-agents/: README.md  requirements.txt
GenAI/OpenAI-agents/_examples/: example_agents.py  model.py
GenAI/OpenAI-agents/examples/: agent_use_cases.py  first_agent.py
GenAI/smolagents_learnings/: README.md  pyproject.toml
GenAI/smolagents_learnings/src/_smolagents_flow/_examples/: basic_flows.py
GenAI/smolagents_learnings/src/_smolagents_flow/_tools/: hugging_face.py  initialize_agents.py  initialize_model.py
OS/Linux/: Introduction.md  README.md
OS/Linux/CMDs/: Basic.md
OS/Windows/: README.md
WEB/: Components.md  HTTP_Request_Response.md  Security_Headers.md
WEB/OWASPTop10/: Broken_Access_Control.md
(+14 files in other folders)
