[project]
name = "smolagents-learnings"
version = "0.1.0"
description = ""
authors = [
    {name = "5h1nch4nn",email = "5h1nch4n@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "tldr (>=3.3.0,<4.0.0)",
    "litellm[proxy] (>=1.58.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "smolagents_learnings", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
